# sentence-embedding-rs

./: Cargo.toml  README.md
src/: embedding.rs  main.rs
