[package]
name = "BIJANG-TEST"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.19", features = ["full", "rt-multi-thread"] }
futures = "0.3"
directories = "4.0"
once_cell = "1.13"
rust-bert= "0.23.0"
# 새로운 웹 프레임워크
warp = "0.3"

